# SalaryCat-main

./: .gitignore  README.md  audio_player.py  gif_loader.py  main.py  pyproject.toml  renderer.py
.github/workflows/: build-binaries.yml
