[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tban-cat"
version = "0.1.1"
description = "A smooth TrueColor terminal GIF player inspired by nyancat."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "pillow>=10.0.0",
]
authors = [
    { name = "tban-cat contributors" },
]
keywords = ["terminal", "gif", "nyancat", "ansi", "truecolor"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
tban-cat = "main:run"
tban-code = "code_typewriter:main"

[tool.setuptools]
py-modules = ["main", "gif_loader", "renderer", "audio_player", "code_typewriter"]
